// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component tests Badge all props 1`] = `
<View
  appearance="outline"
  shape="rounded"
  size="large"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "transparent",
      "borderColor": "#0078d4",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    fontFamily="Segoe UI"
    fontSize={12}
    fontWeight="600"
    numberOfLines={0}
    paddingHorizontal={2}
    style={
      Object {
        "color": "#0078d4",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontStyle": undefined,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    Badge
  </Text>
</View>
`;

exports[`Badge component tests Badge tokens 1`] = `
<View
  size="medium"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={false}
    ellipsizeMode="tail"
    fontFamily="Segoe UI"
    fontSize={12}
    fontWeight="600"
    numberOfLines={0}
    paddingHorizontal={2}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontStyle": undefined,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    Badge Tokens
  </Text>
</View>
`;

exports[`Badge component tests Empty Badge 1`] = `
<View
  size="medium"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
/>
`;

exports[`CounterBadge component tests CounterBadge all props 1`] = `
<View
  appearance="ghost"
  shape="rounded"
  size="large"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": undefined,
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "height": undefined,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    accessible={true}
    style={
      Object {
        "color": "#fff",
        "fontFamily": "Arial",
        "fontSize": 16,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    ♣
  </Text>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#323130",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontStyle": undefined,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    30
  </Text>
</View>
`;

exports[`CounterBadge component tests CounterBadge tokens 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 4,
      "bottom": 0,
      "flexDirection": "row",
      "height": undefined,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontStyle": undefined,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    undefined
  </Text>
</View>
`;

exports[`CounterBadge component tests Empty Badge 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "backgroundColor": "#0078d4",
      "borderColor": "transparent",
      "borderRadius": 4,
      "borderWidth": 1,
      "bottom": 0,
      "flexDirection": "row",
      "height": undefined,
      "justifyContent": "center",
      "minHeight": 24,
      "minWidth": 24,
      "paddingHorizontal": 4,
      "right": 0,
      "width": undefined,
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "Segoe UI",
        "fontSize": 12,
        "fontStyle": undefined,
        "fontWeight": "400",
        "margin": 0,
        "textAlign": undefined,
        "textDecorationLine": undefined,
      }
    }
  >
    undefined
  </Text>
</View>
`;

exports[`PresenceBadge component tests PresenceBadge props 1`] = `
<View
  iconPosition="before"
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "aspectRatio": 1,
      "backgroundColor": "#ffffff",
      "borderColor": "#ffffff",
      "borderWidth": 2,
      "bottom": -2,
      "flexDirection": "row",
      "height": 24,
      "justifyContent": "center",
      "paddingHorizontal": 4,
      "position": "absolute",
      "right": -2,
      "width": 24,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={20}
    bbWidth={20}
    color={-15490802}
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "aspectRatio": 1,
          "color": "#13a10e",
          "height": 20,
          "width": 20,
        },
        Object {
          "flex": 0,
          "height": 20,
          "width": 20,
        },
      ]
    }
    tintColor={-15490802}
    vbHeight={16}
    vbWidth={16}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M11.7 6.7a1 1 0 00-1.4-1.4L7 8.58l-1.3-1.3a1 1 0 00-1.4 1.42l2 2a1 1 0 001.4 0l4-4zM0 8a8 8 0 1116 0A8 8 0 010 8zm8-6a6 6 0 100 12A6 6 0 008 2z"
        fill={
          Array [
            2,
          ]
        }
        propList={
          Array [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
